--- a/Repo/depictions/style/mastyle.css
+++ b/Repo/depictions/style/mastyle.css
@@ -18,7 +18,7 @@ body{
     margin: auto;
     width: device-width;
     max-width: 414px;
- background-color: #ddd;
+ background-color: #EFEFF4;
 color:#444;
 
 }
